# dynamic-haskell-plugin

./: README.md  cabal.project  dynamic-haskell-plugin.cabal  hie.yaml
Data/Dynamic/: Configure.hs  Plugin.hs
Example/: Example.cabal  Example.hs
Message/: Message.cabal  Message.hs  hie.yaml
MessageClass/: MessageClass.cabal  MessageClass.hs  hie.yaml
PingPong/: PingPong.cabal  PingPong.hs  PingPongNoPlugin.hs  PingPongNoPluginWithIs.hs
PrinterService/: PrinterService.cabal  PrinterService.hs  PrinterServiceNoPlugin.hs
Test/: Test.cabal  Test.hs
Tests/: Message.hs  MessageClass.hs
