name: dynamic-haskell-plugin
cabal-version: 1.24
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: Weakly type programs with runtime-irrelevant types
description:

   The Data Dynamic plugin allows the marshaling back and from to dynamics,
   as well as allowing for dynamic dispatch on the Dynamic type.

category: Compiler Plugin
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 containers >= 0.6 && < 0.7
  exposed-modules:
    Data.Dynamic.Plugin

Source-repository head
  Type:     git
  Location: https://github.com/tritlo/dynamic-haskell-plugin.git
