name: dynamic-haskell-plugin
cabal-version: 1.24
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: Weakly type programs with runtime-irrelevant types
description:

   The Data Dynamic plugin allows the marshaling back and from to dynamics,
   as well as allowing for dynamic dispatch on the Dynamic type.

category: Compiler Plugin
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 containers >= 0.6 && < 0.7
  exposed-modules:
    Data.Dynamic.Plugin

test-suite test_dyn
  default-language: Haskell2010
  ghc-options: -dynamic
  type: exitcode-stdio-1.0
  build-depends:  base >= 4 && < 5,
                  ghc-prim >= 0.5,
                  ghc >= 8 && < 9,
                  containers >= 0.6 && < 0.7,
                  dynamic-haskell-plugin
  default-extensions: DataKinds,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      FlexibleContexts,
                      TypeFamilies,
                      PolyKinds,
                      UndecidableInstances,
                      TypeOperators,
                      TypeApplications,
                      ScopedTypeVariables,
                      RoleAnnotations
  main-is: Tests/Test.hs

test-suite test_message
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:  base >= 4 && < 5,
                  ghc-prim >= 0.5,
                  ghc >= 8 && < 9,
                  containers >= 0.6 && < 0.7,
                  dynamic-haskell-plugin
  main-is: Tests/Message.hs

test-suite test_message_class
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:  base >= 4 && < 5,
                  ghc-prim >= 0.5,
                  ghc >= 8 && < 9,
                  containers >= 0.6 && < 0.7,
                  dynamic-haskell-plugin
  main-is: Tests/MessageClass.hs

Source-repository head
  Type:     git
  Location: https://github.com/tritlo/dynamic-haskell-plugin.git
