name: Message
cabal-version: 1.24
build-type: Simple
version: 1.0.0

executable message
  default-language: Haskell2010
  build-depends:  base >= 4 && < 5,
                  ghc-prim >= 0.5,
                  containers,
                  dynamic-haskell-plugin <= 1
  default-extensions: DataKinds,
                      FlexibleInstances,
                      MultiParamTypeClasses,
                      FlexibleContexts,
                      TypeFamilies,
                      PolyKinds,
                      UndecidableInstances,
                      TypeOperators,
                      TypeApplications,
                      ScopedTypeVariables,
                      RoleAnnotations
  main-is: Message.hs

