name: PrinterService
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0

executable pingpong
  default-language: Haskell2010
  build-depends:  base >= 4 && < 5,
                  ghc-prim >= 0.5,
                  containers,
                  dynamic-haskell-plugin <= 1
  main-is: PrinterService.hs

